--- a/index.html
+++ b/index.html
@@ -51,9 +51,12 @@
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
-                <h3>Technologies</h3>
-                <p>Designn pratice focused on digital experiences. We bring forth a deep passion for problem-solwing.
-                </p>
+                <li>
+                    <h3>Technologies</h3>
+                    <p>Designn pratice focused on digital experiences. We bring forth a deep passion for
+                        problem-solwing.
+                    </p>
+                </li>
             </ul>
         </div>
         <div>
