--- a/index.html
+++ b/index.html
@@ -9,24 +9,26 @@
 
 <body>
     <header>
+
         <nav>
-            <span>Web Studio</span>
+            <a href="./index.html">WebStudio</a>
             <ul>
-                <li>Studio</li>
-                <li>Portfolio</li>
-                <li>Contacts</li>
+
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contacts</a></li>
             </ul>
 
             <ul>
-                <li>info@devstudio.com</li>
-                <li>+11 (000) 111-11-11</li>
+                <li><a href="mailto:info@devstudio.com"></a>info@devstudio.com </li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <div>
             <h1>Effective Solutions for Your Business</h1>
-            <button>Order Service</button>
+            <button type="button">Order Service</button>
         </div>
 
         <div>
