--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
 
         <nav>
             <a href="./index.html">WebStudio</a>
-            <ul>
+            <div>
+                <ul>
 
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
-            </ul>
+                    <li><a href="">Studio</a></li>
+                    <li><a href="">Portfolio</a></li>
+                    <li><a href="">Contacts</a></li>
+                </ul>
 
-            <ul>
-                <li><a href="mailto:info@devstudio.com"></a>info@devstudio.com </li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
+                <ul>
+                    <li><a href="mailto:info@devstudio.com"></a>info@devstudio.com </li>
+                    <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
     <main>
