--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
 
         <nav>
             <a href="./index.html">WebStudio</a>
-            <div>
-                <ul>
 
-                    <li><a href="">Studio</a></li>
-                    <li><a href="">Portfolio</a></li>
-                    <li><a href="">Contacts</a></li>
-                </ul>
+            <ul>
 
-                <ul>
-                    <li><a href="mailto:info@devstudio.com"></a>info@devstudio.com </li>
-                    <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-                </ul>
-            </div>
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contacts</a></li>
+            </ul>
+
+
+
         </nav>
+        <label for="adress">
+            <ul>
+                <li><a href="mailto:info@devstudio.com"></a>info@devstudio.com </li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
+        </label>
     </header>
     <main>
         <div>
@@ -57,7 +60,7 @@
                 </li>
                 <li>
                     <h3>Technologies</h3>
-                    <p>Designn pratice focused on digital experiences. We bring forth a deep passion for
+                    <p>Design pratice focused on digital experiences. We bring forth a deep passion for
                         problem-solwing.
                     </p>
                 </li>
