--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
 
         </nav>
-        <label for="adress">
+        <div>
             <ul>
                 <li><a href="mailto:info@devstudio.com"></a>info@devstudio.com </li>
                 <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
-        </label>
+        </div>
     </header>
     <main>
         <div>
