--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="mailto:info@devstudio.com"></a>info@devstudio.com </li>
                 <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
-            </adress>
+        </address>
     </header>
     <main>
         <div>
