--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
         </nav>
         <address>
             <ul>
-                <li><a href="mailto:info@devstudio.com"></a>info@devstudio.com </li>
+                <li><a href="mailto:info@devstudio.com"></a>info@devstudio.com</li>
                 <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
-        <div>
+        <section>
             <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
-        </div>
+        </section>
 
-        <div>
+        <section>
             <h2>Our features</h2>
             <ul>
                 <li>
@@ -65,8 +65,8 @@
                     </p>
                 </li>
             </ul>
-        </div>
-        <div>
+        </section>
+        <section>
             <h2>What are we doing</h2>
             <ul>
                 <li><img src="./images/services-1.jpg" alt="services1"></li>
@@ -75,8 +75,8 @@
                     <img src="./images/services-3.jpg" alt="services3">
                 </li>
             </ul>
-        </div>
-        <div>
+        </section>
+        <section>
             <h2>Our Team</h2>
             <ul>
                 <li>
@@ -100,12 +100,12 @@
                     <p>UI Designer</p>
                 </li>
             </ul>
-        </div>
+        </section>
 
     </main>
     <footer>
-        <a href="/">Webstudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solulions</p>
+        <a href="./index.html">WebStudio</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions</p>
     </footer>
 </body>
 
