--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
             <ul>
                 <li>
                     <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative
-                        solutions.
+                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
 
                 </li>
@@ -60,8 +59,8 @@
                 </li>
                 <li>
                     <h3>Technologies</h3>
-                    <p>Design pratice focused on digital experiences. We bring forth a deep passion for
-                        problem-solwing.
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                        problem-solving.
                     </p>
                 </li>
             </ul>
