--- a/index.html
+++ b/index.html
@@ -64,37 +64,29 @@
                     </p>
                 </li>
             </ul>
-            <h2>What are we doing</h2>
-            <ul>
-                <li><img src="./images/services-1.jpg" alt="services1"></li>
-                <li><img src="./images/services-2.jpg" alt="services2"></li>
-                <li>
-                    <img src="./images/services-3.jpg" alt="services3">
-                </li>
-            </ul>
-        </section>
 
+        </section>
         <section>
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/team-1.jpg" alt="Mark-Guerrero">
+                    <img src="./images/team-1.jpg" width="264" alt="Mark-Guerrero">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/team-2.jpg" alt="Tom-Ford">
+                    <img src="./images/team-2.jpg" width="264" alt="Tom-Ford">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/team-3.jpg" alt="Camila-Garcia">
+                    <img src="./images/team-3.jpg" width="264" alt="Camila-Garcia">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/team-4.jpg" alt="Daniel-Wilson">
-                    <h3>Dainel Wilson</h3>
+                    <img src="./images/team-4.jpg" width="264" alt="Daniel-Wilson">
+                    <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
