--- a/index.html
+++ b/index.html
@@ -64,7 +64,14 @@
                     </p>
                 </li>
             </ul>
-
+            <h2>What are we doing</h2>
+            <ul>
+                <li><img src="./images/services-1.jpg" alt="services1"></li>
+                <li><img src="./images/services-2.jpg" alt="services2"></li>
+                <li>
+                    <img src="./images/services-3.jpg" alt="services3">
+                </li>
+            </ul>
         </section>
         <section>
             <h2>Our Team</h2>
